hphp/test/slow/type_annotation/type_annotation7.php.expectf
Fatal error: Non-existent type constant C::T in %s on line 6
